@@ -1,5 +1,5 @@
 <?php
-// $Id: cache.inc,v 1.25.4.7 2010-10-16 05:41:40 dereine Exp $
+// $Id: cache.inc,v 1.25.4.8 2010-10-26 19:06:26 dereine Exp $
 /**
  * @file cache.inc
  *
@@ -199,115 +199,3 @@ function views_cache_get($cid, $use_language = FALSE) {
 
   return cache_get($cid, 'cache_views');
 }
-
-/**
- * @defgroup views_object_cache Non-volatile cache storage
- * @{
- * The non-volatile object cache is used to store an object while it is
- * being edited, so that we don't have to save until we're completely
- * done. The cache should be 'cleaned' on a regular basis, meaning to
- * remove old objects from the cache, but otherwise the data in this
- * cache must remain stable, as it includes unsaved changes.
- */
-
-/**
- * Get an object from the non-volatile Views cache.
- *
- * This function caches in memory as well, so that multiple calls to this
- * will not result in multiple database reads.
- *
- * @param $obj
- *   A 32 character or less string to define what kind of object is being
- *   stored; primarily this is used to prevent collisions.
- * @param $name
- *   The name of the view (or other object) being stored.
- * @param $skip_cache
- *   Skip the memory cache, meaning this must be read from the db again.
- *
- * @return
- *   The data that was cached.
- */
-function views_object_cache_get($obj, $name, $skip_cache = FALSE) {
-  static $cache = array();
-  $key = "$obj:$name";
-  if ($skip_cache) {
-    unset($cache[$key]);
-  }
-
-  if (!array_key_exists($key, $cache)) {
-    $result = db_query("SELECT * FROM {views_object_cache} WHERE sid = :sid AND obj = :obj AND name = :name",
-      array(
-        ':sid' => session_id(),
-        ':obj' => $obj,
-        ':name' => $name
-      ));
-    foreach ($result as $data) {
-      if ($data) {
-        $cache[$key] = unserialize($data->data);
-      }
-    }
-  }
-  return isset($cache[$key]) ? $cache[$key] : NULL;
-}
-
-/**
- * Store an object in the non-volatile Views cache.
- *
- * @param $obj
- *   A 32 character or less string to define what kind of object is being
- *   stored; primarily this is used to prevent collisions.
- * @param $name
- *   The name of the view (or other object) being stored.
- * @param $cache
- *   The object to be cached. This will be serialized prior to writing.
- */
-function views_object_cache_set($obj, $name, $cache) {
-  views_object_cache_clear($obj, $name);
-  db_insert('views_object_cache')
-    ->fields(array(
-      'sid' => session_id(),
-      'obj' => $obj,
-      'name' => $name,
-      'data' => serialize($cache),
-      'updated' => REQUEST_TIME,
-    ))
-    ->execute();
-}
-
-/**
- * Remove an object from the non-volatile Views cache
- *
- * @param $obj
- *   A 32 character or less string to define what kind of object is being
- *   stored; primarily this is used to prevent collisions.
- * @param $name
- *   The name of the view (or other object) being stored.
- */
-function views_object_cache_clear($obj, $name) {
-  db_delete('views_object_cache')
-    ->condition('sid', session_id())
-    ->condition('obj', $obj)
-    ->condition('name', $name)
-    ->execute();
-}
-
-/**
- * Remove all objects in the object cache that are older than the
- * specified age.
- *
- * @param $age
- *   The minimum age of objects to remove, in seconds. For example, 86400 is
- *   one day. Defaults to 7 days.
- */
-function views_object_cache_clean($age = NULL) {
-  if (empty($age)) {
-    $age = 86400 * 7; // 7 days
-  }
-  db_delete('views_object_cache')
-    ->condition('updated', REQUEST_TIME - $age, '<')
-    ->execute();
-}
-
-/**
- * @}
- */
