@@ -1,5 +1,5 @@
 <?php
-// $Id: views.install,v 1.50.4.7 2010-10-16 08:41:24 dereine Exp $
+// $Id: views.install,v 1.50.4.8 2010-10-26 19:06:26 dereine Exp $
 /**
  * @file views.install
  * Contains install and update functions for Views.
@@ -459,6 +459,30 @@ function views_update_6010() {
   db_drop_field($ret, 'views_view', 'view_php');
   db_drop_field($ret, 'views_view', 'is_cacheable');
 
+
+  return $ret;
+}
+
+/**
+ * Remove views_object_cache table and move the data to ctools_object_cache.
+ */
+function views_schema_6011() {
+  $schema = views_schema(__FUNCTION__);
+  unset($schema['views_object_cache']);
+  return $schema;
+}
+
+/**
+ * Remove views_object_cache table and move the data to ctools_object_cache.
+ */
+function views_update_6011() {
+  $ret = array();
+
+  $caches = db_query("SELECT * FROM {views_object_cache}")->fetch();
+  foreach ($caches as $item) {
+    drupal_write_record('ctools_object_cache', $item);
+  }
+  db_drop_table($ret, 'views_object_cache');
 
   return $ret;
 }
